--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -12,13 +12,14 @@ repos:
   - id: double-quote-string-fixer
   - id: end-of-file-fixer
   - id: trailing-whitespace
-- repo: https://github.com/pre-commit/mirrors-isort
-  rev: master
+- repo: https://github.com/PyCQA/isort
+  rev: 5.12.0
   hooks:
   - id: isort
-- repo: https://gitlab.com/pycqa/flake8
-  rev: 3.8.3
+    language_version: python3.9
+- repo: https://github.com/PyCQA/flake8
+  rev: 6.1.0
   hooks:
   - id: flake8
     additional_dependencies: ['flake8-per-file-ignores']
-    language_version: python3.7
+    language_version: python3.9
